fix mobile screen chart overflow

--- a/tracker.css
+++ b/tracker.css
@@ -753,6 +753,8 @@ body {
   .charts {
     margin-top: 2rem;
     gap: 0.5rem;
+    overflow-x: scroll;
+    gap: 0.75rem;
   }
 
   /* Header */
